--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,9 @@
             </intent-filter>
         </activity>
     </application>
-	<!--<uses-permission android:name="android.permission.INTERNET" />-->
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-sdk
+		android:minSdkVersion="17"
+		android:targetSdkVersion="17"
+		/>
 </manifest>
