--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,8 +13,15 @@
         </activity>
     </application>
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<!-- This makes my app work as expected... -->
 	<uses-sdk
-		android:minSdkVersion="17"
-		android:targetSdkVersion="17"
+		android:minSdkVersion="1"
+		android:targetSdkVersion="3"
 		/>
+	<!-- And this, although my ideal intent, just does not
+	     fly... Buttons get squished... -->
+	<!-- <uses-sdk
+		 android:minSdkVersion="1"
+		 android:targetSdkVersion="3"
+		 /> -->
 </manifest>
