--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="net.vultaire.soundboard"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/soundboard">
         <activity android:name="Soundboard"
                   android:label="@string/app_name">
             <intent-filter>
@@ -13,15 +13,8 @@
         </activity>
     </application>
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<!-- This makes my app work as expected... -->
 	<uses-sdk
 		android:minSdkVersion="1"
-		android:targetSdkVersion="3"
+		android:targetSdkVersion="17"
 		/>
-	<!-- And this, although my ideal intent, just does not
-	     fly... Buttons get squished... -->
-	<!-- <uses-sdk
-		 android:minSdkVersion="1"
-		 android:targetSdkVersion="3"
-		 /> -->
 </manifest>
